# gof2hd-decomp

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  _lp_disasm.txt  _lp_resolve.py  matches.tsv  report.json  syms.txt  syms2.txt
.claude/: settings.local.json
_work/: campaign.md
_work/original_layout/: original_layout.json  original_layout_notes.md  parse_dumps.py  tu_mapping.md
_work/prompts/: decomp-worker.md
_work/reconstructions/: Gun-layout.md  SpaceLounge-layout.md  createMission_analysis.md
_work/types/: build_inventory.py  class_stems.txt  cleanup_workflow.js  ghidra_layouts.json  inventory.json
cmake/: DownloadNDK.cmake  orbstack-ndk-arm.toolchain.cmake  toolchain.cmake
docs/: DECOMP_NOTES.md  DEFERRED.md  IDENTICALITY.md  PORTABILITY.md  RELINK.md  ROADMAP.md  STRING_REMODEL.md  VALIDATION.md  unified_symbols.tsv
host/: main.cpp
include/: gof2_types.h
include/gof2/: AEFile.h  AEGeometry.h  AEMath.h  AENormalFile.h  AEPakFile.h  AERandom.h  AESoundRessource.h  AMeshMerger.h  AbyssEngine.h  Achievements.h  Agent.h  ApplicationManager.h  AutoPilotList.h  BSphere.h  BeamGun.h  BloomShader.h  BluePrint.h  BlurShader.h  BombGun.h  BoundingAAB.h  BoundingSphere.h  BoundingVolume.h  BumpMapping.h  BumpRimCubeShader.h  BumpRimCubeShader_new.h  BumpShader.h  BumpShaderCloak.h  BumpShaderParticle.h  BumpShaderRefract.h  BumpShaderV2.h  BumpShaderV3.h  BumpShaderV4.h  Camera.h  CheatCode.h  CheatHandler.h  ChoiceWindow.h  ColorMixAdd.h  ConfigReader.h  CubeMapping.h  CubeNormalMapping.h  (+150 more)
mac/: build.sh  build_dylib.sh  build_game.sh  host.mm  macshim.h
merged/: merge_one.py
merged/include/: AEGeometry.h  AEPakFile.h  AERandom.h  Achievements.h  AutoPilotList.h  BloomShader.h  BumpMapping.h  BumpRimCubeShader_new.h  BumpShader.h  BumpShaderParticle.h  Camera.h  CheatCode.h  CheatHandler.h  ColorMixAdd.h  ConfigReader.h  CubeMapping.h  DNSShader.h  EaseInOutMatrix.h  Engine.h  Galaxy.h  GameText.h  Generator.h  GenericShader2.h  ImageFactory.h  KeyCode.h  KeyFrame.h  ListItemWindow.h  MGame.h  Material.h  Mesh.h  ModStation.h  MovingStars.h  NFC.h  ObjectGun.h  ParticleSettingsRef.h  ParticleSystemMesh.h  PendingProduct.h  PlayerGasCloud.h  PlayerStation.h  PlayerTurret.h  (+23 more)
merged/src/: AEMath.cpp  AENormalFile.cpp  AEPakFile.cpp  AERandom.cpp  AMeshMerger.cpp  Achievements.cpp  AutoPilotList.cpp  BloomShader.cpp  BluePrint.cpp  BlurShader.cpp  BoundingAAB.cpp  BoundingSphere.cpp  BoundingVolume.cpp  BumpShader.cpp  BumpShaderParticle.cpp  BumpShaderRefract.cpp  BumpShaderV2.cpp  BumpShaderV3.cpp  Camera.cpp  CheatHandler.cpp  ChoiceWindow.cpp  ColorMixAdd.cpp  ConfigReader.cpp  CubeMapping.cpp  CubeNormalMapping.cpp  CutScene.cpp  DNSShader.cpp  DialogueWindow.cpp  DrawFBOShader.cpp  EaseInOut.cpp  EaseInOutMatrix.cpp  EnergyShield.cpp  FBOContainer.cpp  FileRead.cpp  Galaxy.cpp  GameRecord.cpp  GameText.cpp  GenericShader.cpp  GenericShader1.cpp  Globals.cpp  (+93 more)
native/: build.sh  fieldmap.json  gen_structs.py  merge.py  reconcile.py  rewrite_body.py
native/src/: AEFile.cpp  AEGeometry.cpp  AEMath.cpp  AEPakFile.cpp  AESoundRessource.cpp  AMeshMerger.cpp  AbyssEngine.cpp  Achievements.cpp  Agent.cpp  ApplicationManager.cpp  BSphere.cpp  BeamGun.cpp  BluePrint.cpp  BombGun.cpp  BoundingVolume.cpp  BumpMapping.cpp  BumpRimCubeShader.cpp  BumpRimCubeShader_new.cpp  BumpShaderCloak.cpp  BumpShaderRefract.cpp  BumpShaderV4.cpp  CheatCode.cpp  CheatHandler.cpp  DNSShader.cpp  DialogueWindow.cpp  EaseInOutMatrix.cpp  Engine.cpp  Explosion.cpp  FBOContainer.cpp  FModSound.cpp  FileInterfaceAndroid.cpp  GameData.cpp  Generator.cpp  GenericShader.cpp  GenericShader2.cpp  GlowPPShader.cpp  GlowShader.cpp  Gun.cpp  HackingGame.cpp  Hud.cpp  (+75 more)
src/: AEFile.cpp  AEGeometry.cpp  AEMath.cpp  AENormalFile.cpp  AEPakFile.cpp  AERandom.cpp  AESoundRessource.cpp  AEString.h  AbyssEngine.cpp  Achievements.cpp  Agent.cpp  ApplicationManager.cpp  AutoPilotList.cpp  BeamGun.cpp  BloomShader.cpp  BluePrint.cpp  BlurShader.cpp  BombGun.cpp  BoundingAAB.cpp  BoundingSphere.cpp  BoundingVolume.cpp  BumpMapping.cpp  BumpRimCubeShader.cpp  BumpRimCubeShader_new.cpp  BumpShader.cpp  BumpShaderCloak.cpp  BumpShaderParticle.cpp  BumpShaderRefract.cpp  BumpShaderV2.cpp  BumpShaderV3.cpp  BumpShaderV4.cpp  Camera.cpp  CheatCode.cpp  ChoiceWindow.cpp  ColorMixAdd.cpp  ConfigReader.cpp  CubeMapping.cpp  CubeNormalMapping.cpp  CutScene.cpp  DNSShader.cpp  (+144 more)
src/engine/: array.cpp  string.cpp
src/game/: ItemSort.h
src/platform/: gl.h  jni_bridge.cpp  libc.h  recovered_128188.cpp  recovered_1a3c94.cpp  recovered_7a41c.cpp  recovered_7a41c.h  recovered_7b2a0.cpp  recovered_a3cc4.cpp  recovered_a462c.cpp  recovered_a462c.h
src/recovered/: GetWidth.cpp  (+7 more)
tools/: DRIFT_RULES.md  Gof2BSim.java  Gof2ExtractCtx.java  README.md  SHA256SUMS  UNION_RULES.md  aei.py  apply_wave_results.py  coverage.py  dedup_externs.py  dispatch_worklist.py  drift_scan.py  dump_diffs.py  fieldmap.json  gen_section_order.py  goal_lint.py  goal_lint_baseline.json  gofbin.py  gofdiff.py  integrity.sh  layout.py  lint_hacks.py  master_step.sh  match_link.py  method_registry.json  methodize_apply.py  methodize_scan.py  ratchet.py  scope_filter.py  sodiff_allow.txt  strip_externs.py  try.sh  verify.sh  verify_baseline.json  wave_prepare.py  wave_workflow.js  wrongtype_worklist.py
work/: ArraySetLength<AEGeometry*>.md  DisableClip.md  End3d.md  GetHeight.md  GetWidth.md  LightSetParticleAmbient.md  OpenRead.md  OpenWrite.md  Quit.md  ResumeEngineSound.md  SetAnimationState.md  SetApplicationManager.md  SetTexture.md  SetWorldViewMatrix.md  StartDraw2FBO.md  TransformGetTransform.md  _extract2.tsv  alignToHorizon.md  applyDisable.md  applyMissionCompleted.md  batch2.tsv  batch2_ctx.tsv  build_pkg.py  candidates.tsv  changeAmount.md  class_summary.tsv  collect.sh  collect_class.sh  drawFooter.md  drawFooterNoBackButton.md  finish.md  freeMissionLock.md  funcs_by_class.tsv  gen_consts.py  gen_vtables.py  getCurrentItem.md  getDockingTime.md  getHitpoints.md  getHullDamageRate.md  getMaxLoad.md  (+38 more)
(+7862 files in other folders)
